--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,14 @@ spring:
       separator: ";"
       username: sa
       password: 123456
+      schema-locations: classpath*:db/schema.sql
+      data-locations: classpath*:db/account.sql
   datasource:
     url: jdbc:h2:mem:bdb;MODE=MYSQL
     driver-class-name: org.h2.Driver
     username: sa
     password: 123456
+
   jpa:
     database: h2
   mvc:
